[package]
name = "bevy_game"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
avian3d = "0.3"
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
bevy-inspector-egui = "0.31.0"
bevy_panorbit_camera = "0.27.0"
